<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    tools:context=".MainActivity">

    <TextView
        android:id="@+id/tvInput"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:background="@color/lightGray"
        android:padding="10dp"
        android:textSize="48sp"
        android:text=""
        android:gravity="bottom|right"
    />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal"
    >


        <Button
            android:layout_margin="2dp"
            android:id="@+id/button7"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_7"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/button8"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_8"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/button9"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_9"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonDiv"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="/"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_4"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/button5"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_5"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/button6"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_6"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonMult"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="*"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/button1"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_1"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/button2"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_2"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_3"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonMinus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/MinusSign"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonNull"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/_0"
            android:onClick="onDigit"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonDot"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/DecimalPoint"
            android:onClick="onDecimalPoint"
            tools:ignore="UsingOnClickInXml" />

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/clr"
            android:onClick="onClear"
            tools:ignore="UsingOnClickInXml"/>

        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/PlusSign"
            android:onClick="onOperator"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:layout_margin="2dp"
            android:id="@+id/buttonEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/EqualSign"
            android:onClick="onEqual"
            tools:ignore="UsingOnClickInXml"/>

    </LinearLayout>


</LinearLayout>